@@ -365,7 +365,7 @@ CONFIG_NET_MULTICAST=n
 #
 # STM32F107vc Ethernet device driver settings
 #
-CONFIG_STM32_PHYADDR=0x01
+CONFIG_STM32_PHYADDR=1
 CONFIG_STM32_MII=n
 CONFIG_STM32_RMII=y
 CONFIG_STM32_RMII_MCO=y
