@@ -198,7 +198,7 @@ CONFIG_CAN2_BAUD=700000
 #
 # STM32F40xxx Ethernet device driver settings
 #
-CONFIG_STM32_PHYADDR=0x01
+CONFIG_STM32_PHYADDR=1
 CONFIG_STM32_MII=y
 CONFIG_STM32_MII_MCO1=y
 CONFIG_STM32_MII_MCO2=n
